# nbrag

./: .gitignore  AGENTS.md  LICENSE  README.md  README.md.bak  README.zh-CN.md  README.zh-CN.md.bak  config.example.yaml  my_load_config.py  pub_pypi_nbrag.py  pyproject.toml
.serena/: project.yml
.tmp/openai-docs-cache/: codex-manual.md  codex-manual.outline.md
docs/: 2026-06-22-nbrag-ai-facing-doc-audit.md
nbrag/: __init__.py  __main__.py  bm25_index.py  chunker.py  collection_profiles.py  config.py  core.py  core_legacy_20260618.py.bak  defaults.py  embeddings.py  ingest.py  loggers.py  mcp_tools.py  retrieval.py  runtime.py  server.py  server.py.bak  state.py  storage.py  symbol_index.py  tokenizer.py
scripts/: _ingest_langchain_ai_docs.py  ingest_feapder.py  ingest_funboost.py  ingest_funboost_one_md.py  ingest_langchain_ai_codes_and_docs.py  ingest_langchain_ai_docs.py  ingest_project.py  query_langchain.py  run_all_ingest.py  start_http_rag_mcp.py  start_local_rag_mcp.py  test_find_def.py  test_raw_get.py  trigger_bug.py
scripts/ingest_china_history/: convert_zhongguotongshi.py  ingest_zhongguotongshi.py  中国通史_傅乐成_全文.md
scripts/ingest_ex1/: 01_总则.md  02_物权.md  03_合同.md  04_人格权.md  06_继承.md  07_侵权责任.md  ingest_civil_code.py  prepare_civil_code.py  民法典_全文.md
scripts/ingest_ex2_marriage_law/: ingest_marriage_law.py  prepare_marriage_law.py  司法解释_一_婚姻家庭编.md  司法解释_二_婚姻家庭编.md  民法典_第五编_婚姻家庭.md  解释二_发布会背景介绍.md  解释二_记者问答与典型案例.md
scripts/ingest_ex3_worker_rights/: ingest_worker_rights.py  专项附加扣除暂行办法.md  个人所得税法.md  个人所得税法实施条例.md  住房公积金管理条例.md  劳动争议司法解释一.md  劳动争议调解仲裁法.md  劳动保障监察条例.md  劳动合同法.md  劳动合同法实施条例.md  劳动法.md  失业保险条例.md  女职工劳动保护特别规定.md  工伤保险条例.md  工资支付暂行规定.md  带薪年休假实施办法.md  带薪年休假条例.md  社会保险法.md  职业病防治法.md
scripts/ingest_finance/: convert_finance_pdfs.py  ingest_finance.py
scripts/ingest_novel/: _test_search.py  ingest_sanguo.py
scripts/inguest_licai/: ingest_licai.py  手把手教你读财报财报是用来排除企业的 (唐朝) (Z-Library).md  方正中期能源产业链周度策略20260615.md
scripts/inguest_novel/: _test_search.py  ingest_doomsday.py  ingest_sanguo.py  ingest_shen_diao.py
scripts/ingust_novel/: _test_catalog.py  _test_fetch.py  scrape_doomsday.py  scrape_sanguo.py  scrape_shen_diao.py
skills/: readme.md
skills/nbrag-workflow/: SKILL.md
tests/: demo_flexibel_pool.py  test_bm25_only.py  test_collection_profiles.py  test_config_defaults.py  test_core_path_filters.py  test_mcp_contracts.py  test_public_api_structure.py  test_repro_scripts.py  test_restart_process.py  test_runtime_cache_refresh.py  test_server_contracts.py  test_sqlite_vars.py  test_tokenizer.py
tests/ai_codes/: _debug_adjacent.py  _debug_adjacent2.py  benchmark.py  benchmark_mcp_http_tools.py  call_mcp_stats.py  list_knowledge_bases.py  repro_nbrag_search_error.py  (+5 more)
(+611 files in other folders)
