[project]
name = "nbrag"
dynamic = ["version"]
description = "Agentic RAG MCP Server — 11 retrieval tools plus workflow help for AI-driven multi-round retrieval over any text"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["mcp", "rag", "agentic-rag", "chromadb", "embedding", "knowledge-base", "document-search", "text-search", "legal-search", "code-search", "ai-agent", "mcp-server"]
authors = [
    {name = "ydf", email = "ydf0509@sohu.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.24.0",
    "chromadb>=0.4.0",
    "langchain-text-splitters>=0.2.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "bm25s[full]>=0.2.0",
]

[project.urls]
Homepage = "https://github.com/ydf0509/nbrag"
Repository = "https://github.com/ydf0509/nbrag"

[project.scripts]
nbrag = "nbrag.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "nbrag/__init__.py"
